# ShareRS

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  sqlx-data.json
.github/: FUNDING.yml
.github/workflows/: docker.yml  general.yml
migrations/: 1_init.sql
src/: constraint.rs  main.rs
src/database/: mod.rs  postgres.rs
src/database/models/: file.rs  ids.rs  mod.rs  token.rs  url.rs  user.rs
src/modules/: mime.rs  mod.rs  password.rs  rand.rs  template.rs
src/routes/: get.rs  mod.rs
src/routes/api/v1/: file.rs  files.rs  mod.rs  url.rs
src/storage/: local.rs  mod.rs  s3.rs
template/: index.html
