[package]
name = "share-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "sharers"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Actix
actix = "0.13.0"
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"

async-trait = "0.1.68"
lazy_static = "1.4.0"

# communication
rust-s3 = "0.33.0"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }

# serde/json
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }

# utils
dotenvy = "0.15.7"
env_logger = "0.10.0"
thiserror = "1.0.40"

# sql
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "json", "uuid"] }


# etc
rand = "0.8.5"
bytes = "1.4.0"
sha1 = { version = "0.10.5", features = ["std"] }
sha2 = "0.10.7"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
log = "0.4.19"
