[package]
name = "sharers"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
name = "sharers"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Axum and related
axum = { version = "0.6.18", features = ["multipart", "headers", "tracing"] }
tokio = { version = "1.29.1", features = ["full"] }


# communication
rust-s3 = "0.33.0"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }

# serde/json
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }

# utils
async-trait = "0.1.68"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
thiserror = "1.0.40"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# sql
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "offline",
    "macros",
    "migrate",
    "json",
    "decimal",
    "uuid",
] }
rust_decimal = { version = "1.30.0", features = ["serde-with-float", "serde-with-str"] }

# etc
rand = "0.8.5"
bytes = "1.4.0"
sha1 = { version = "0.10.5", features = ["std"] }
sha2 = "0.10.7"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
tower-http = { version = "0.4.1", features = ["full"] }