[package]
name = "sharers"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
description = "A small and simple ShareX Server"
repository = "https://github.com/MPThLee/ShareRS"
build = "build.rs"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Axum and related
axum = { version = "0.6.18", features = ["multipart", "tracing"] }
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
] }
tower-http = { version = "0.4.1", features = ["trace", "util"] }
tera = { version = "1.19.0", default-features = false }

# communication
rust-s3 = "0.33.0"

# serde/json
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }

# utils
async-trait = "0.1.68"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
thiserror = "1.0.40"
anyhow = "1.0.71"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# sql
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "offline",
    "macros",
    "migrate",
    "uuid",
] }

# etc
rand = "0.8.5"
bytes = "1.4.0"
sha2 = "0.10.7"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
argon2 = "0.5.0"
glob = "0.3.1"
infer = "0.14.0"

[build-dependencies]
built = { version = "0.6.1", features = ["chrono", "semver", "git2"] }
